# quarto-mamba-cookiecutter

./: cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.project_slug}}/: .gitignore  _quarto.yml  dvc.yaml  environment.yml  index.qmd  justfile  params.yaml  pyproject.toml
{{cookiecutter.project_slug}}/.static/css/: styles.scss
{{cookiecutter.project_slug}}/docs/: example.qmd  index.qmd
{{cookiecutter.project_slug}}/example_1/: index.qmd
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py
