[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "A brief description of your project."
authors = [
    {name = "{{cookiecutter.name}}", email = "{{cookiecutter.email}}"},
]
keywords = ["sample", "example", "python"]

[tool.black]
line-length = 88
target-version = ["py311", "py312"]
extend-exclude = '''
(
    \.git
    | \data
    | \.quarto_output
    | \.static
    | \.dvc
)
'''

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
# quarto support maybe coming soon (https://github.com/astral-sh/ruff/issues/3792)
extend-include = ["*.ipynb"]